--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 .hidden {
     display : none;
   }
-
 body {
-  color : white;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-size: cover;
+  background-position: center center;
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
+  animation-delay: 0.5s;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 img {
@@ -16,5 +22,5 @@ img {
   right:0px;
   bottom:0px;
   z-index: -1;
-  opacity:88%;
+  opacity:90%;
 }
