--- a/style.css
+++ b/style.css
@@ -19,20 +19,21 @@
 }
 body {
   color: white;
-  display: flex;
   align-items: center;
   justify-content: center;
+  text-align : center;
 }
 
 h2 {
-  font-size: 1.17em;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  font-size: 11rem;
   font-weight: bold;
+  margin-bottom : 0.1rem;
 }
 
+h1 {
+  font-size :2.4rem;
+  font-weight : bold;
+}
 img {
   position:absolute;
   width:100%;
@@ -45,3 +46,42 @@ img {
   opacity:90%;
 }
 
+ul {
+  list-style-type: none;
+  font-size :1.7rem;
+}
+
+button {
+  cursor: pointer;
+  background : none;
+  border : none;
+  text-align : center;
+}
+
+input {
+  background: none;
+  border: 0;
+  font-size: 22px;
+  border-bottom: 2px solid white;
+  color : white;
+  outline: transparent;
+}
+input::placeholder {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.name_input::placeholder {
+  font-size : 2rem;
+  margin-bottom : 35px;
+}
+
+#login-form {
+  margin : 1rem;
+}
+
+.name_input {
+  color: white;
+  font-size: 36px;
+  border-bottom: 3px solid rgba(255, 255, 255, 0.8);
+  margin-bottom: 20px;
+}
