--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.hidden {
+.hidden { 
   display : none;
 }
 
@@ -17,23 +17,23 @@ position: absolute;
 bottom: 25px;
 left: 25px;
 }
+
 body {
 color: white;
-align-items: center;
-justify-content: center;
 text-align : center;
+font-weight: bold;
+font-family: "Open Sans", sans-serif;
 }
 
 h2 {
 font-size: 11rem;
-font-weight: bold;
 margin-bottom : 0.1rem;
 }
 
 h1 {
 font-size :2.4rem;
-font-weight : bold;
 }
+
 img {
 position:absolute;
 width:100%;
@@ -66,6 +66,7 @@ border-bottom: 2px solid white;
 color : white;
 outline: transparent;
 }
+
 input::placeholder {
 color: rgba(255, 255, 255, 0.8);
 }
@@ -84,4 +85,9 @@ color: white;
 font-size: 36px;
 border-bottom: 3px solid rgba(255, 255, 255, 0.8);
 margin-bottom: 20px;
+}
+
+.centerd {
+  display : flex;
+  align-items : center;
 }
